ADding api to remove user from repository
