# core/internal/router/router.go
@@ -70,6 +70,7 @@ func (r *Router) repositoryRoutes() {
 		router.With(r.IsRepositoryAdmin).Post("/{repositoryID}/roles", r.repositoryHandler.InviteUser)
 		router.With(r.IsRepositoryAdmin).Patch("/{repositoryID}/roles/{accountID}", r.repositoryHandler.UpdateRole)
 		router.With(r.IsRepositoryAdmin).Get("/{repositoryID}/roles", r.repositoryHandler.GetUsers)
+		router.With(r.IsRepositoryAdmin).Delete("/{repositoryID}/roles/{accountID}", r.repositoryHandler.RemoveUser)
 	})
 }
 
